tests/too-many-inputs.stderr
error: mismatched types
  ┌─ test:1:1
  │
1 │ show 1 2 3
  │ ^^^^^^
  │ │
  │ expected `Number -> Number -> _`, but found `()`
  │ too many inputs provided to this function
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

